# NeuralNet_2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
NeuralNet_2/src/: ANN.hpp  ANNExecutor.cpp  ANNExecutor.hpp
NeuralNet_2/src/internal/: MatrixDispatcher.cpp  MatrixDispatcher.hpp  types.hpp
NeuralNet_2/src/layers/: Container.cpp  Container.hpp  FeedForwardLayer.cpp  FeedForwardLayer.hpp  FeedForwardNetwork.hpp  Layer.cpp  Layer.hpp
NeuralNet_2/src/layers/atoms/: BiasLayer.cpp  BiasLayer.hpp  FCLayer.cpp  FCLayer.hpp  NormLayer.hpp  ReLuLayer.cpp  ReLuLayer.hpp
NeuralNet_2/src/layers/containers/: Chain.cpp  Chain.hpp
demos/: demo1.cpp
